--- a/King-Survival/Refactored/King-Survival-2/KingSurvival2Game.csproj
+++ b/King-Survival/Refactored/King-Survival-2/KingSurvival2Game.csproj
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="KingSurvivalGame.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
