--- a/King-Survival/Refactored/King-Survival-2/KingSurvival2Game.csproj
+++ b/King-Survival/Refactored/King-Survival-2/KingSurvival2Game.csproj
@@ -42,7 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="KingSurvivalGame.cs" />
-    <Compile Include="SingletonUserInteractor.cs" />
+    <Compile Include="SingletonGameUtilities.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
