Refactoring - Classes Extraction
Some classes were extracted documentation headers added and some code
formating

--- a/King-Survival/Refactored/King-Survival-2/KingSurvival2Game.csproj
+++ b/King-Survival/Refactored/King-Survival-2/KingSurvival2Game.csproj
@@ -41,9 +41,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BoardDisplay.cs" />
     <Compile Include="BoardRenderer.cs" />
     <Compile Include="Coordinates.cs" />
+    <Compile Include="KingPositioning.cs" />
     <Compile Include="KingSurvivalGame.cs" />
+    <Compile Include="PawnsPositioning.cs" />
     <Compile Include="Piece.cs" />
   </ItemGroup>
   <ItemGroup>
